--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container"></div>
+	<h4 id="text">Welcome to the world of Web development</h4>
 	
 
 
