--- a/main.html
+++ b/main.html
@@ -8,8 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="container"></div>
+	<div class="container">
 	<h4 id="text">Welcome to the world of Web development</h4>
+	</div>
 	
 
 
